Fix overflowing

--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -92,6 +92,7 @@
 }
 
 .goods__link-title {
+  display: inline-block;
   position: relative;
   max-width: 160px;
   z-index: 3;
