--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -2,20 +2,18 @@
   position: relative;
   color: $color-alice-blue;
   margin-top: -115px;
-  padding: 343px 25% 243px;
-  transform: translateX(-4px);
+  padding: 305px 0 281px 476px;
 
   @include vp-1023 {
     margin-top: -99px;
     margin-bottom: 41px;
     padding: 222px 51px 127px;
-    transform: translate(0);
   }
 
   @include vp-767 {
     margin-top: -66px;
     margin-bottom: 66px;
-    padding: 151px 22px;
+    padding: 151px 0 151px 26px;
   }
 
   @include vp-374 {
@@ -24,7 +22,6 @@
 }
 
 .intro__wrapper {
-  transform: translateY(-38px);
 
   @include vp-1023 {
     top: 29%;
@@ -34,7 +31,6 @@
   @include vp-767 {
     top: 27%;
     left: 7%;
-    transform: translate(5px, 0);
   }
 }
 
@@ -43,7 +39,7 @@
   line-height: 94px;
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 8px;
+  letter-spacing: 7px;
 
   @include vp-1023 {
     font-size: 64px;
